fix stretched images

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -47,16 +47,12 @@ i { margin-right: 10px; }
 .btn.btn-primary.listing-inquire { width: 100%; }
 .listing-featured-image img {
   width: 100%;
-  height: 200px;
   margin-bottom: 15px;
 } 
 
 @media (max-width: 767px) {
  .listing-featured-image img {
-    width: 100%;
-    height: 100%;
     max-width: 400px;
-    max-height: 400px;
   }
 }
 
